--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
   "dependencies": {
     "node": "^13.12.0",
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
   }
 }
