--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,6 +24,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
       env:
         CI: true
+    - name: npm install
+      run: |
+          make install
     - name: Run linter
       run: |
         make lint
