--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Small games for big brains",
   "main": {
     "brain-games": "src/index.js",
-    "brain-even": "src/isEven"
+    "brain-even": "games/isEven.js",
+    "brain-calc": "games/calc.js"
   },
   "type": "module",
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
