--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": {
     "brain-games": "src/index.js",
     "brain-even": "games/isEven.js",
-    "brain-calc": "games/calc.js"
+    "brain-calc": "games/calc.js",
+    "brain-gcd": "games/gcd.js"
   },
   "type": "module",
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
-    "brain-calc": "bin/brain-calc.js"
+    "brain-calc": "bin/brain-calc.js",
+    "brain-gcd": "bin/brain-gcd.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -30,6 +32,7 @@
   },
   "homepage": "https://github.com/Stonek79/frontend-project-lvl1#readme",
   "dependencies": {
+    "@hexlet/pairs": "^1.0.14",
     "node": "^13.12.0",
     "readline-sync": "^1.4.10"
   },
