--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "brain-games": "src/index.js",
     "brain-even": "games/isEven.js",
     "brain-calc": "games/calc.js",
-    "brain-gcd": "games/gcd.js"
+    "brain-gcd": "games/gcd.js",
+    "brain-progression": "games/progression.js"
   },
   "type": "module",
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
     "brain-calc": "bin/brain-calc.js",
-    "brain-gcd": "bin/brain-gcd.js"
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progression": "bin/brain-progression.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
