Edit project after second mentor check

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,4 +9,7 @@ globals:
 parserOptions:
   ecmaVersion: 2020
   sourceType: module
-rules: {}
+rules: {
+  "no-console": "off",
+  "import/extensions": "off"
+  }
