--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,5 +11,5 @@ parserOptions:
   sourceType: module
 rules: {
   "no-console": "off",
-  "import/extensions": "off"
+  "import/extensions": "off",
   }
